multicpu support for windows.